--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+true-infinite = []
+
+#default = ["true-infinite"]
 
 [dependencies]
